@@ -1,3 +1,10 @@
+2005-04-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpsamplepointeditor.[ch]: Connect to the
+	GimpImage::update-sample-point and GimpProjection::update signals
+	and idle-pick colors at the sample points' coordinates.
+	Addresses bug #137776.
+
 2005-04-18  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c: restrict the menus to 15 items.
